add ENV DEBIAN_FRONTEND=noninteractive

--- a/devcontainer_C++/devcontainer.json
+++ b/devcontainer_C++/devcontainer.json
@@ -8,9 +8,7 @@
   // Features to add to the dev container. More info: https://containers.dev/features.openmp
   // "features": {},
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [
-    3000
-  ],
+  // "forwardPorts": [],
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "gcc -v",
   // Configure tool-specific properties.
