--- a/devcontainer_DrugDesign_backend/Dockerfile
+++ b/devcontainer_DrugDesign_backend/Dockerfile
@@ -3,9 +3,10 @@ FROM mcr.microsoft.com/devcontainers/cpp:ubuntu-24.04
 # [Optional] Uncomment this section to install additional vcpkg ports.
 # RUN su vscode -c "${VCPKG_ROOT}/vcpkg install <your-port-name-here>"
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 # [Optional] Uncomment this section to install additional packages.
 RUN apt-get update &&\
-  export DEBIAN_FRONTEND=noninteractive &&\
   apt-get -y install --no-install-recommends clang gcc clang-format cmake make git\
   libboost-all-dev 
 
